<resources>
    <string name="app_name">apotheca</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Apotheca</string>

    <!-- Strings related to login -->
    <string name="prompt_email">CPF</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">AUTENTICAR</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="error_invalid_email">Esse usuário é inválido.</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_no_internet">Não há conexão com a internet.</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="apotheca">apotheca</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="dialog_excluir">Deseja excluir essa postagem?</string>
    <string name="sim">Sim</string>
    <string name="nom">Não</string>
    <!-- Navigation Drawer menu labels -->
    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_turmas">Minhas turmas</string>
    <string name="menu_posts">Minhas postagens</string>
    <string name="menu_notificacoes">Notificações</string>
    <string name="menu_sobre">Sobre nós</string>
    <string name="menu_sair">Sair</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Perfil</item>
        <item>Minhas turmas</item>
        <item>Minhas postagens</item>
        <item>Notificações</item>
        <item>Sobre nós</item>
        <item>Sair</item>
    </string-array>
    <string name="lista_postagens">Postagens</string>
    <string name="notificacoes">Notificações</string>
    <string name="curso">Curso</string>
    <string name="sobre_mim">Sobre mim</string>
    <string name="hello_blank_fragment">Teste</string>
    <string name="titulo_da_postagem">Título da postagem</string>
    <string name="nome_da_turma">Nome da Turma</string>
    <string name="publicar">Publicar</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="tipo_da_postagem">Tipo da postagem</string>
    <string name="componente">Turma</string>
    <string name="tags">Tags</string>
    <string name="anexos">Anexos</string>
    <string name="ver_comentarios">Ver comentários</string>
    <string name="reportar">Reportar</string>
    <string name="title_activity_logout">LogoutActivity</string>

</resources>
