<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_turmas"
            android:icon="@drawable/minhas_turmas"
            android:title="@string/menu_turmas" />

        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/meus_posts"
            android:title="@string/menu_posts" />

    </group>

    <item android:title="Outros" >
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/about"
                android:title="@string/menu_sobre" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/logout"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>