<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    android:background="#FFFFFF"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/pattern1"
            android:layout_width="match_parent"
            android:layout_height="230.41dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-110dp"
            android:background="@drawable/pattern1"
            />
        <View
            android:id="@+id/pattern2"
            android:layout_width="488.43dp"
            android:layout_height="223.24dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-90dp"
            android:background="@drawable/pattern2"
            android:alpha="0.2"
            />
        <TextView
            android:id="@+id/apotheca"
            android:layout_width="139dp"
            android:layout_height="32dp"
            android:layout_marginStart="23dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="48dp"
            android:text="@string/apotheca"
            android:textAppearance="@style/apotheca"
            android:gravity="center_vertical"
            android:fontFamily="@font/aldrichregular"/>

        <View
            android:id="@+id/line"
            android:layout_width="74.08dp"
            android:layout_height="2.74dp"
            android:layout_below="@+id/apotheca"
            android:layout_marginStart="23dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/line"
            android:visibility="visible" />
    </RelativeLayout>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/retangulo_login"
                    android:gravity="center_vertical"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:elevation="2dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/retangulo_login"
                    android:gravity="center_vertical"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="16dp"
                    android:padding="10dp"
                    android:elevation="2dp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_button"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/action_sign_in"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold" />

            <!-- layout linha -->


        </LinearLayout>

    </ScrollView>
</LinearLayout>